Point to USAGE in README and add dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+scikit-learn = "^1.2.2"
+pandas = "^2.0.0"
+matplotlib = "^3.7.1"
 
 
 [build-system]
